--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/ProfileDropDown/ProfileMenuNavLink.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/ProfileDropDown/ProfileMenuNavLink.razor
@@ -1,6 +1,7 @@
 ﻿@namespace TimeWarp.Architecture.Features.Applications.Components.NavBars.Dark
 @inherits ParentComponent
 
-<a class="block px-4 py-2 text-sm leading-5 text-gray-700 transition duration-150 ease-in-out hover:bg-gray-100 focus:outline-none focus:bg-gray-100" role="menuitem" @attributes=Attributes>
+<a class="block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 focus:outline-none focus:bg-gray-100" role="menuitem" @attributes=Attributes>
   @ChildContent
 </a>
+
