--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/ProfileDropDown/ProfileDropDown.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/ProfileDropDown/ProfileDropDown.razor
@@ -1,23 +1,11 @@
 ﻿@namespace TimeWarp.Architecture.Features.Applications.Components.NavBars.Dark
-@inherits ComponentBase
+@inherits BaseComponent
 <!-- Profile dropdown -->
 <div class="relative ml-3">
   <div>
     <ProfileButton @onclick=OnClickHandler />
   </div>
-  <!--
-    TODO:
-    Profile dropdown panel, show/hide based on dropdown state.
 
-    Entering: "transition ease-out duration-100"
-      From: "opacity-0 scale-95"
-      To: "opacity-100 scale-100"
-    Leaving: "transition ease-in duration-75"
-      From: "opacity-100 scale-100"
-      To: "opacity-0 scale-95"
-  -->
-  <div class=@CssBuilder>
-    <ProfileMenuPanel />
-  </div>
+  <ProfileMenuPanel class=@CssBuilder />
 </div>
 
