Use new js location for dispatching action Spa.Counter.DispatchIncrementCountAction()

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Counter/Pages/CounterPage.razor
@@ -22,7 +22,7 @@
 
     <hr class="mt-4" />
     <Text class="mt-4 block">Click below to send a IncrementCountAction via JsInterop.</Text>
-    <Button class="" data-qa="JsInterop" onclick="window.DispatchIncrementCountAction()">
+    <Button class="" data-qa="JsInterop" onclick="Spa.Counter.DispatchIncrementCountAction()">
       Increment Count by 7 via JavaScript Interop
     </Button>
   </MainContent>
