NotifyLossOfInterest fires on scroll and click outside but isn't removing eventlistners.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/ProfileDropDown/ProfileDropDown.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/ProfileDropDown/ProfileDropDown.razor
@@ -6,6 +6,6 @@
     <ProfileButton @onclick=OnClickHandler />
   </div>
 
-  <ProfileMenuPanel class=@CssBuilder />
+  <ProfileMenuPanel Id=@nameof(ProfileMenuPanel) class=@CssBuilder />
 </div>
 
