--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Transition/Transition.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Transition/Transition.razor
@@ -1,5 +1,13 @@
-﻿@namespace TimeWarp.Architecture.Components
-<div>
-  @ChildContent
-</div>
+﻿@code {
+  [Parameter] public bool Show { get; set; }
+  [Parameter] public bool Appear { get; set; } = false;
+  [Parameter] public RenderFragment ChildContent { get; set; }
 
+  private TransitionContext TransitionContext = new();
+
+  protected override void OnParametersSet()
+  {
+    TransitionContext.Show = Show;
+    TransitionContext.Appear = Appear;
+  }
+}
