--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/TransitionPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/TransitionPage.razor
@@ -14,6 +14,7 @@
     >
       I will fade in and out when this component is working correctly.
     </Transition>
+    <span>IsOpen:@IsOpen</span>
   </MainContent>
 </SideBarPage>
 
@@ -22,6 +23,7 @@
 
   private void OnClickHandler()
   {
+    Console.WriteLine("Clicked");
     IsOpen = !IsOpen;
   }
 }
