--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/ProfileMenu/Components/ProfileDropDown/ProfileMenuNavLink.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/ProfileMenu/Components/ProfileDropDown/ProfileMenuNavLink.razor
@@ -1,4 +1,4 @@
-﻿@namespace TimeWarp.Architecture.Features.Applications.Components.NavBars.Dark
+﻿@namespace TimeWarp.Architecture.Features.ProfileMenus.Components
 @inherits BaseComponent
 @implements IParentComponent
 
