--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
@@ -11,6 +11,7 @@
 @using TimeWarp.Architecture.Features
 @using TimeWarp.Architecture.Features.Applications.Components.NavBars.Dark
 @using TimeWarp.Architecture.Features.Debugger.Components
+@using TimeWarp.Architecture.Features.ProfileMenus.Components
 @using TimeWarp.Architecture.Features.ToDo
 @using TimeWarp.Architecture.Features.ToDo.Components
 @using TimeWarp.Architecture.Pages
