Add a Title to require param

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/EventStream/Pages/EventStreamPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/EventStream/Pages/EventStreamPage.razor
@@ -6,7 +6,7 @@
 <StackedPage>
   <HeaderContent>Event Stream Page</HeaderContent>
   <MainContent>
-    <SimpleAlert class="mt-2">EventStream is an example of middleware.  It adds each action to a list.</SimpleAlert>
+    <SimpleAlert Title="Alert Title" class="mt-2">EventStream is an example of middleware.  It adds each action to a list.</SimpleAlert>
     <EventStream />
   </MainContent>
 </StackedPage>
