--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/HomePage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/HomePage.razor
@@ -1,7 +1,7 @@
 @namespace TimeWarp.Architecture.Pages
 @inherits BaseComponent
 
-<SideBarPage>
+<SidebarPage>
   <HeaderContent>
     @ApplicationState.Name
   </HeaderContent>
@@ -38,4 +38,4 @@
   <ModalContent>
     <AboutModal/>
   </ModalContent>
-</SideBarPage>
+</SidebarPage>
