--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/TransitionPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/TransitionPage.razor
@@ -1,6 +1,6 @@
 ﻿@namespace TimeWarp.Architecture.Pages
 
-<SideBarPage>
+<SidebarPage>
   <MainContent>
     <Button @onclick=OnClickHandler>Click Me</Button>
     <Transition
@@ -16,7 +16,7 @@
     </Transition>
     <span>IsOpen:@IsOpen</span>
   </MainContent>
-</SideBarPage>
+</SidebarPage>
 
 @code{
   private bool IsOpen { get; set; }
