--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/TestPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Debugger/Pages/TestPage.razor
@@ -1,6 +1,6 @@
 ﻿@namespace TimeWarp.Architecture.Pages
 
-<SideBarPage>
+<SidebarPage>
     <MainContent>
         <div class="relative grow overflow-hidden rounded-xl border border-dashed border-gray-400 opacity-75">
             <svg class="absolute inset-0 h-full w-full stroke-gray-900/10" fill="none">
@@ -13,5 +13,5 @@
             </svg>
         </div>
     </MainContent>
-</SideBarPage>
+</SidebarPage>
 
