Use SidebarNavSections to reduce duplication

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Sidebar/Components/SideBar/SidebarLink.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Sidebar/Components/SideBar/SidebarLink.razor
@@ -1,4 +1,4 @@
-﻿@namespace TimeWarp.Architecture.Components
+﻿@namespace TimeWarp.Architecture.Features.Sidebars
 @inherits ParentComponent
 
 <li>
