--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
@@ -12,10 +12,11 @@
 @using TimeWarp.Architecture.Features.Applications.Components.NavBars.Dark
 @using TimeWarp.Architecture.Features.Debugger.Components
 @using TimeWarp.Architecture.Features.ProfileMenus.Components
+@using TimeWarp.Architecture.Features.EventStreams
+@using TimeWarp.Architecture.Features.Sidebars;
 @using TimeWarp.Architecture.Features.ToDo
 @using TimeWarp.Architecture.Features.ToDo.Components
 @using TimeWarp.Architecture.Pages
-@using TimeWarp.Architecture.Features.EventStreams
 
 @using Toolbelt.Blazor.Splitter
 
