Update Home pages wording a little

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/HomePage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/HomePage.razor
@@ -9,15 +9,26 @@
   <MainContent>
     <div class="px-4 py-6 sm:px-0">
       <div class="flex flex-col">
-        <p>
-          Welcome to your new app with <HyperLink href="https://timewarpengineering.github.io/blazor-state/"> Blazor State</HyperLink> management and an easily extensible pipeline utilizing
-          <HyperLink href="https://github.com/jbogard/MediatR" target="blank">MediatR.</HyperLink>
-        </p>
-        <p class="mt-4">
-          <HyperLink href="https://github.com/TimeWarpEngineering/blazor-state" target="blank">Blazor State GitHub project</HyperLink>
-        </p>
+        <div>
+          Welcome to your new
+          <HyperLink href="https://github.com/TimeWarpEngineering/timewarp-architecture">TimeWarp Architecture</HyperLink>
+          app with
+          <ul>
+            <li>
+              <HyperLink href="https://www.nuget.org/profiles/TimeWarp.Enterprises">TimeWarp.Enterprises nugets</HyperLink>
+            </li>
+            <li>
+              <HyperLink href="https://timewarpengineering.github.io/blazor-state/"> Blazor State</HyperLink>
+            </li>
+            <li>
+              <HyperLink href="https://github.com/jbogard/MediatR" target="blank">MediatR.</HyperLink>
+            </li>
+            <li>
+              <HyperLink href="https://chrome.google.com/webstore/detail/redux-devtools/lmhkpmbekcpmknklioeibfkpmmfibljd?hl=en" target="blank">Redux Dev Tools Chrome Extension </HyperLink>
+            </li>
+          </ul>
+        </div>
 
-        <HyperLink href="https://chrome.google.com/webstore/detail/redux-devtools/lmhkpmbekcpmknklioeibfkpmmfibljd?hl=en" target="blank">Redux Dev Tools Chrome Extension </HyperLink>
 
         <SimpleAlert class="mt-4" Title="Tailwind UI">
           This site is built with
