--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Sidebar/Components/SideBar/SidebarPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Sidebar/Components/SideBar/SidebarPage.razor
@@ -20,7 +20,16 @@
       </header>
     }
     <main class="py-10 px-4 sm:px-6 lg:px-8 grow flex flex-col ">
+      @if (@MainContent is not null)
+      {
       @MainContent
+      }
+      else
+      {
+        <div class="h-full border-4 border-gray-200 border-dashed rounded-lg">
+          Add Your Content here.
+        </div>
+      }
     </main>
     <SiteFooter />
   </div>
