--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Modals/AboutModal.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Modals/AboutModal.razor
@@ -1,23 +1,58 @@
-﻿@namespace TimeWarp.Architecture.Components
+﻿@using TimeWarp.Architecture.Web.Spa
+@using TimeWarp.State.Plus.Extensions
+@namespace TimeWarp.Architecture.Components
 
 <ModalContainer ModalId=@ModalId OnActivate=Activate>
+
   <MainContent>
     <div class="mx-auto flex h-12 w-12 items-center justify-center rounded-full bg-green-100">
-        <svg class="h-6 w-6 text-green-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" />
-        </svg>
+      <!-- Icon or logo here -->
     </div>
     <div class="mt-3 text-center sm:mt-5">
-        <h3 class="text-base font-semibold leading-6 text-gray-900" id="modal-title">You Rock!</h3>
-        <div class="mt-2">
-            <p class="text-sm text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur amet labore.</p>
-        </div>
+      @if (AssemblyInfo != null)
+      {
+        <h3 class="text-lg font-semibold leading-6 text-gray-900" id="modal-title">@AssemblyInfo.Title</h3>
+        <p class="mt-2 text-sm text-gray-500">AlgorithmId: @AssemblyInfo.AlgorithmId</p>
+        <p class="mt-2 text-sm text-gray-500">Title: @AssemblyInfo.Title</p>
+        <p class="mt-2 text-sm text-gray-500">Description: @AssemblyInfo.Description</p>
+        <p class="mt-2 text-sm text-gray-500">Configuration: @AssemblyInfo.Configuration</p>
+        <p class="mt-2 text-sm text-gray-500">Company: @AssemblyInfo.Company</p>
+        <p class="mt-2 text-sm text-gray-500">Product: @AssemblyInfo.Product</p>
+        <p class="mt-2 text-sm text-gray-500">Copyright: @AssemblyInfo.Copyright</p>
+        <p class="mt-2 text-sm text-gray-500">Trademark: @AssemblyInfo.Trademark</p>
+        <p class="mt-2 text-sm text-gray-500">Culture: @AssemblyInfo.Culture</p>
+        <p class="mt-2 text-sm text-gray-500">Version: @AssemblyInfo.Version</p>
+        <p class="mt-2 text-sm text-gray-500">FileVersion: @AssemblyInfo.FileVersion</p>
+        <p class="mt-2 text-sm text-gray-500">InformationalVersion: @AssemblyInfo.InformationalVersion</p>
+        <p class="mt-2 text-sm text-gray-500">NeutralResourcesLanguage: @AssemblyInfo.NeutralResourcesLanguage</p>
+        <p class="mt-2 text-sm text-gray-500">CLSCompliant: @AssemblyInfo.ClsCompliant</p>
+        <p class="mt-2 text-sm text-gray-500">InternalsVisibleTo: @AssemblyInfo.InternalsVisibleTo</p>
+        <p class="mt-2 text-sm text-gray-500">DelaySign: @AssemblyInfo.DelaySign</p>
+        <p class="mt-2 text-sm text-gray-500">KeyFile: @AssemblyInfo.KeyFile</p>
+        <p class="mt-2 text-sm text-gray-500">KeyName: @AssemblyInfo.KeyName</p>
+        <p class="mt-2 text-sm text-gray-500">CommitHash: @AssemblyInfo.CommitHash</p>
+        <p class="mt-2 text-sm text-gray-500">ShortHash: @AssemblyInfo.ShortHash</p>
+        <p class="mt-2 text-sm text-gray-500">CommitUrl: <a href="@AssemblyInfo.CommitUrl" class="mt-2 text-sm text-blue-500">@AssemblyInfo.CommitUrl</a></p>
+        <p class="mt-2 text-sm text-gray-500">CommitDate: @AssemblyInfo.CommitDate</p>
+        <p class="mt-2 text-sm text-gray-500">RepositoryUrl: <a href="@AssemblyInfo.RepositoryUrl" class="mt-2 text-sm text-blue-500">@AssemblyInfo.RepositoryUrl</a></p>
+      }
+      else
+      {
+        <p class="text-sm text-gray-500">Loading...</p>
+      }
     </div>
   </MainContent>
 </ModalContainer>
 
 @code
 {
-    public static string ModalId = nameof(AboutModal);
-    protected Task Activate() => Task.CompletedTask;
+  public const string ModalId = nameof(AboutModal);
+  private AssemblyInfo? AssemblyInfo;
+
+  protected Task Activate()
+  {
+    AssemblyInfo = typeof(Program).Assembly.GetAssemblyInfo();
+    // Do something when the modal is activated
+    return Task.CompletedTask;
+  }
 }
