--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
@@ -17,6 +17,8 @@
 @using TimeWarp.Architecture.Features.ToDo
 @using TimeWarp.Architecture.Features.ToDo.Components
 @using TimeWarp.Architecture.Pages
+@using TimeWarp.Architecture.Web.Spa
+@using TimeWarp.State.Plus.Extensions
 
 @using Toolbelt.Blazor.Splitter
 
