--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/ModalContainer.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/ModalContainer.razor
@@ -8,10 +8,8 @@
     <div class="fixed inset-0 bg-gray-500 bg-opacity-75"></div>
     <div class="fixed inset-0 z-10 overflow-y-auto">
       <div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
-        <div class="relative overflow-hidden rounded-lg bg-white px-4 pt-5 pb-4 text-left shadow-xl  sm:my-8 sm:w-full sm:max-w-sm sm:p-6">
-          <div>
-            @MainContent
-          </div>
+        <div class="relative overflow-hidden rounded-lg bg-white px-4 pt-5 pb-4 text-left shadow-xl sm:my-8 sm:w-1/2 sm:max-w-md sm:p-6">
+          @MainContent
           <div class="mt-5 sm:mt-6">
             @if (ActionContent is null)
             {
