Using full tailwind for development.  Its just fastor

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Pages/_Host.cshtml
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Pages/_Host.cshtml
@@ -17,6 +17,10 @@
   <!-- Compiled Tailwind CSS -->
   <link href="css/site.css" rel="stylesheet" />
 
+  <!-- Full Tailwind Development CDN -->
+  @* TODO: Remove for production *@
+  <script src="https://cdn.tailwindcss.com"></script>
+
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
