--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Modals/AssemblyInfo/AssemblyInfoModal.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Modals/AssemblyInfo/AssemblyInfoModal.razor
@@ -4,22 +4,22 @@
 <ModalContainer ModalId=@ModalId OnActivate=Activate>
   <ActionContent></ActionContent>
   <MainContent>
-    <div class="absolute right-0 top-0 hidden pr-6 pt-6 sm:block">
+    <div class="absolute right-0 top-0 hidden pr-4 pt-4 sm:block">
       <button
         type="button"
         class="rounded-md bg-white text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"
         @onclick=CloseModal>
         <span class="sr-only">Close</span>
-        <TimeWarp.HeroIcons.Outline.XMarkIcon class="h-6 w-6" />
+        <TimeWarp.HeroIcons.Outline.XMarkIcon class="h-6 w-6"/>
       </button>
     </div>
-    <div class="mx-auto flex h-12 w-12 items-center justify-center rounded-full">
-      <img alt="Solid Team" class="w-1/4" src="/images/TheFreezeTeam/SOLID_S.png"/>
+    <div class="mx-auto flex flex-col h-12 w-12 items-center justify-center rounded-full">
+      <img alt="Solid Team" class="w-full" src="/images/TheFreezeTeam/SOLID_S.png"/>
+      <h3 class="text-lg font-semibold leading-6 text-gray-900" id="modal-title">@AssemblyInfo?.Title</h3>
     </div>
-    <div class="mt-3 text-center sm:mt-5">
+    <div class="mt-3 text-left sm:mt-5">
       @if (AssemblyInfo != null)
       {
-        <h3 class="text-lg font-semibold leading-6 text-gray-900" id="modal-title">@AssemblyInfo.Title</h3>
         <PropertyDisplay PropertyName=@nameof(AssemblyInfo.AlgorithmId) Value=@AssemblyInfo.AlgorithmId?.ToString()/>
         <PropertyDisplay PropertyName=@nameof(AssemblyInfo.Description) Value=@AssemblyInfo.Description/>
         <PropertyDisplay PropertyName=@nameof(AssemblyInfo.Configuration) Value=@AssemblyInfo.Configuration/>
@@ -39,9 +39,9 @@
         <PropertyDisplay PropertyName=@nameof(AssemblyInfo.KeyName) Value=@AssemblyInfo.KeyName/>
         <PropertyDisplay PropertyName=@nameof(AssemblyInfo.CommitHash) Value=@AssemblyInfo.CommitHash/>
         <PropertyDisplay PropertyName=@nameof(AssemblyInfo.ShortHash) Value=@AssemblyInfo.ShortHash/>
-        <LinkDisplay Url=@AssemblyInfo.CommitUrl DisplayText=@AssemblyInfo.CommitUrl/>
         <PropertyDisplay PropertyName=@nameof(AssemblyInfo.CommitDate) Value=@AssemblyInfo.CommitDate?.ToString("yyyy-MM-dd HH:mm:ss")/>
-        <LinkDisplay Url=@AssemblyInfo.RepositoryUrl DisplayText=@AssemblyInfo.RepositoryUrl/>
+        <LinkDisplay Url=@AssemblyInfo.CommitUrl DisplayText="View Commit Details"/>
+        <LinkDisplay Url=@AssemblyInfo.RepositoryUrl DisplayText="View Repository"/>
       }
       else
       {
@@ -53,7 +53,7 @@
 
 @code
 {
-  public const string ModalId = nameof(AboutModal);
+  public const string ModalId = nameof(AssemblyInfoModal);
   private AssemblyInfo? AssemblyInfo;
 
   protected Task Activate()
