--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/ProfileMenu/Components/ProfileButton.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/ProfileMenu/Components/ProfileButton.razor
@@ -3,10 +3,10 @@
 
 <button
   id="user-menu"
-  class="flex text-sm border-2 border-transparent rounded-full focus:outline-none focus:border-white transition duration-150 ease-in-out"
+  class="text-gray-400 hover:text-white flex text-sm border-2 border-transparent rounded-full focus:outline-none focus:text-white focus:border-white focus:bg-gray-700 transition duration-150 ease-in-out"
   aria-label="User menu"
   aria-haspopup="true"
-  @attributes=Attributes
->
-  <img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+  @attributes=Attributes>
+
+  <TimeWarp.HeroIcons.Outline.UserCircleIcon class="h-8 w-8 rounded-full" />
 </button>
