Make the AssemblyInfoModal available on all SidebarPages

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Sidebar/Components/SideBar/SidebarPage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Sidebar/Components/SideBar/SidebarPage.razor
@@ -36,12 +36,12 @@
 </div>
 
 <!-- Absolute Position Items -->
-@if (ModalContent != null)
-{
-  <ModalController ActiveModalId=@ActiveModalId>
-    <ModalContainers>
-      @ModalContent
-    </ModalContainers>
-  </ModalController>
-}
+
+<ModalController ActiveModalId=@ActiveModalId>
+  <ModalContainers>
+    @ModalContent
+    <AssemblyInfoModal/>
+  </ModalContainers>
+</ModalController>
+
 <!-- End Absolute Position Items -->
