--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/HomePage.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/HomePage.razor
@@ -39,6 +39,7 @@
 
         <img alt="Solid Team" class="w-full" src="/images/TheFreezeTeam/SOLID_Team.png" />
         <div>
+          <FluentButton Appearance="Appearance.Accent" OnClick=FiveSecondTaskButtonClick>Launch Five Second Task</FluentButton>
           <Button Variant=Button.ButtonVariant.Default data-qa="FiveSecondButton" @onclick=FiveSecondTaskButtonClick>Launch Five Second Task</Button>
           <Button Variant=Button.ButtonVariant.Default data-qa="TwoSecondButton" @onclick=TwoSecondTaskButtonClick>Launch Two Second Task</Button>
           <Button Variant=Button.ButtonVariant.Default data-qa="ModalButton" @onclick=ModalButtonClick>Show Modal</Button>
