--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Sidebar/Components/Sections/DeveloperPagesSidebarNavSection.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Sidebar/Components/Sections/DeveloperPagesSidebarNavSection.razor
@@ -4,4 +4,5 @@
   <SidebarLink Href=@TestPage.GetPageUrl() IconCharacter=@('T')>@TestPage.Title</SidebarLink>
   <SidebarLink Href=@EventStreamPage.GetPageUrl() IconCharacter=@('E')>@EventStreamPage.Title</SidebarLink>
   <SidebarLink Href=@ServicesPage.GetPageUrl() IconCharacter=@('S')>@ServicesPage.Title</SidebarLink>
+  @* <SidebarLink Href=@UserClaimsPage.GetPageUrl() IconCharacter=@('C')>@UserClaimsPage.Title</SidebarLink> *@
 </SidebarNavSection>
