naming convention and primary constructors

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
@@ -12,16 +12,18 @@
 @using TimeWarp.Architecture.Features
 @using TimeWarp.Architecture.Features.Applications.Components.NavBars.Dark
 @using TimeWarp.Architecture.Features.Debugger.Components
-@using TimeWarp.Architecture.Features.ProfileMenus.Components
 @using TimeWarp.Architecture.Features.EventStreams
+@using TimeWarp.Architecture.Features.ProfileMenus.Components
 @using TimeWarp.Architecture.Features.Sidebars;
 @using TimeWarp.Architecture.Features.ToDo
 @using TimeWarp.Architecture.Features.ToDo.Components
 @using TimeWarp.Architecture.Pages
 @using TimeWarp.Architecture.Web.Spa
+@using TimeWarp.Features.Developer
+@using TimeWarp.Features.JavaScriptInterop
+@using TimeWarp.Features.ReduxDevTools
+@using TimeWarp.Features.Routing
 @using TimeWarp.State.Plus.Extensions
-
-@using Toolbelt.Blazor.Splitter
 
 @*#if(web && counter)*@
 @using TimeWarp.Architecture.Features.Counters.Components
