--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Sidebar/Components/SideBar/SidebarLink.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Sidebar/Components/SideBar/SidebarLink.razor
@@ -54,9 +54,6 @@
   protected override void OnParametersSet()
   {
     base.OnParametersSet();
-    if (Href is null)
-    {
-      throw new ArgumentException("The Href parameter is required.");
-    }
+    Guard.Against.NullOrWhiteSpace(Href);
   }
 }
