--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Components/App.razor
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Components/App.razor
@@ -8,16 +8,19 @@
   <title>TimeWarp.Architecture</title>
   <base href="/"/>
 
-  <!-- add inter font -->
+  @* add inter font *@
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 
-  <!-- Compiled Tailwind CSS -->
-  <link href="css/site.css" rel="stylesheet" />
+  @* Compiled Tailwind CSS *@
+  <link href="css/site.css" rel="stylesheet"/>
 
   @* Add FluentUI *@
-  @* <link href="Web.Spa.styles.css" rel="stylesheet" /> *@
-  @* <link href="_content/Microsoft.FluentUI.AspNetCore.Components/css/reboot.css" rel="stylesheet" /> *@
+  <link href="_content/Microsoft.FluentUI.AspNetCore.Components/css/reboot.css" rel="stylesheet" />
   <script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>
+
+
+  @* Web.Spa scoped styles *@
+  @* <link href="Web.Spa.styles.css" rel="stylesheet" /> *@
 
   @* Icons *@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
